--- a/manual/src/html_processing/src/BUILD.bazel
+++ b/manual/src/html_processing/src/BUILD.bazel
@@ -24,7 +24,7 @@ ocaml_module(
         "//stdlib:Stdlib.Sys",
         "//stdlib:Stdlib.String",
         ## (Soup)
-        ## (Scanf)
+        "//stdlib:Stdlib.Scanf",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Option",
         "//stdlib:Stdlib.List",
