--- a/boot/BUILD.bazel
+++ b/boot/BUILD.bazel
@@ -1,10 +1,4 @@
-load("//bzl:rules.bzl",
-     "bootstrap_archive",
-     "bootstrap_ocamlc",
-     "bootstrap_library")
-
-exports_files(["ocamlc",
-               "ocamllex"])
+exports_files(["ocamlc", "ocamllex"])
 
 # alias(
 #     name = "boot.ocamlc",
@@ -18,18 +12,3 @@ exports_files(["ocamlc",
 ## the only difference between //stdlib and //boot:stdlib is that the
 ## latter includes //stdlib:Std_exit and //stdlib:camlheader.
 
-## root Makefile:
-# The bytecode compiler
-# ocamlc$(EXE): compilerlibs/ocamlcommon.cma \
-#               compilerlibs/ocamlbytecomp.cma $(BYTESTART)
-# 	$(CAMLC) $(LINKFLAGS) -compat-32 -o $@ $^
-bootstrap_ocamlc(
-    name = "boot.ocamlc",
-    # exe  = "ocamlc",
-    opts = ["-compat-32"],
-    deps = [
-        "//compilerlibs:ocamlcommon",
-        "//compilerlibs:ocamlbytecomp"
-    ],
-    visibility = ["//visibility:public"]
-)
