--- a/ocamldoc/BUILD.bazel
+++ b/ocamldoc/BUILD.bazel
@@ -144,7 +144,7 @@ ocaml_module(
         ":Odoc_dot", ## (Ocamldoc Odoc_dot)
         ":Odoc_config", ## (Ocamldoc Odoc_config)
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//driver:Main_args",
         "//stdlib:Stdlib.List",
@@ -247,7 +247,7 @@ ocaml_module(
         ":Odoc_cross", ## (Ocamldoc Odoc_cross)
         ":Odoc_comments_global", ## (Ocamldoc Odoc_comments_global)
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         ## (Odoc_see_lexer)
         ## (Odoc_parser)
@@ -331,7 +331,7 @@ ocaml_module(
         ":Odoc_extension", ## (Ocamldoc Odoc_extension)
         ":Odoc_exception", ## (Ocamldoc Odoc_exception)
         ":Odoc_class", ## (Ocamldoc Odoc_class)
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Printf",
         "//utils:Misc",
@@ -384,7 +384,7 @@ ocaml_module(
         ":Odoc_type", ## (Ocamldoc Odoc_type)
         ":Odoc_print", ## (Ocamldoc Odoc_print)
         ":Odoc_module", ## (Ocamldoc Odoc_module)
-        ## (Str)
+        "//otherlibs/str:Str",
         "//parsing:Parsetree_cmi",
         "//utils:Misc",
         "//stdlib:Stdlib.List",
@@ -520,7 +520,7 @@ ocaml_module(
         ":Odoc_global", ## (Ocamldoc Odoc_global)
         ":Odoc_dag2html", ## (Ocamldoc Odoc_dag2html)
         "//stdlib:Stdlib.Sys",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         ## (Odoc_ocamlhtml)
         "//utils:Misc",
@@ -584,7 +584,7 @@ ocaml_signature(
         ":Odoc_exception", ## (Ocamldoc Odoc_exception)
         ":Odoc_class", ## (Ocamldoc Odoc_class)
         "//typing:Types",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//parsing:Location",
         "//parsing:Asttypes_cmi",
     ]
@@ -609,7 +609,7 @@ ocaml_module(
         ":Odoc_info", ## (Ocamldoc Odoc_info)
         "//stdlib:Stdlib.Sys",
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Format",
@@ -638,7 +638,7 @@ ocaml_module(
         ":Odoc_messages", ## (Ocamldoc Odoc_messages)
         ":Odoc_info", ## (Ocamldoc Odoc_info)
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Option",
         "//stdlib:Stdlib.List",
@@ -664,7 +664,7 @@ ocaml_module(
         ":Odoc_extension", ## (Ocamldoc Odoc_extension)
         ":Odoc_exception", ## (Ocamldoc Odoc_exception)
         ":Odoc_class", ## (Ocamldoc Odoc_class)
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.List",
     ]
 )
@@ -686,7 +686,7 @@ ocaml_module(
     deps   = [
         "//stdlib:Stdlib.Sys",
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Int",
@@ -760,7 +760,7 @@ ocaml_module(
     deps   = [
         ":Odoc_misc", ## (Ocamldoc Odoc_misc)
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//typing:Path",
         "//stdlib:Stdlib.Map",
         "//stdlib:Stdlib.List",
@@ -850,7 +850,7 @@ ocaml_module(
         ":Odoc_extension", ## (Ocamldoc Odoc_extension)
         ":Odoc_exception", ## (Ocamldoc Odoc_exception)
         ":Odoc_class", ## (Ocamldoc Odoc_class)
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.List",
     ]
@@ -868,7 +868,7 @@ ocaml_signature(
         ":Odoc_extension", ## (Ocamldoc Odoc_extension)
         ":Odoc_exception", ## (Ocamldoc Odoc_exception)
         ":Odoc_class", ## (Ocamldoc Odoc_class)
-        ## (Str)
+        "//otherlibs/str:Str",
     ]
 )
 
@@ -993,7 +993,7 @@ ocaml_module(
         ":Odoc_info", ## (Ocamldoc Odoc_info)
         "//typing:Types",
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Hashtbl",
@@ -1039,7 +1039,7 @@ ocaml_module(
         ":Odoc_messages", ## (Ocamldoc Odoc_messages)
         ":Odoc_info", ## (Ocamldoc Odoc_info)
         "//stdlib:Stdlib.String",
-        ## (Str)
+        "//otherlibs/str:Str",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Format",
